            Added: OSDMenuKeyboard_ChangeKeypad() to change or suppress keypads (except Standard and CAPS)
            Added: OSDMenuKeyboard_SetKeypadMode() to change the default starting keypad mode
            Fixed: Align keyboard title horizontally and vertically centered (2 px to the left and 3 px up)
            Fixed: Align key descriptions centered (1 px to the right)
            Fixed: Align keyboard text and cursor centered (2 px up)
            Added: OSDMenuKeyboard_SetCursor() to change the cursor type
            Added: OSDMenuKeyboard_AutomaticLowerCase() to automatically change to standard keypad mode after entering an upper-case character
            Modified: Replace three dots "..." by UTF-8 horizontal ellipsis character
            Modified: StrMkUTF8() has now an additional parameter "size" and writes at most "size" bytes (including the terminating null byte) to SourceString
            Fixed: Wrong use of MAX_FILE_NAME_SIZE (which in fact is the max. string length of a file name)
            Fixed: Prevent ValidFileName() from missing MAX_FILE_NAME_SIZE and looping over whole strName with UTF-8 characters
            Added: HDD_GetFileDir() which got lost when converting to TMS only code
            Modified: Make constant parameters of the functions in elf, hdd, tap, TMSOSDKeyboard, TMSOSDMenu, rec and string const
            Modified: Release date
2019-12-12  Fixed: isMJD() had a year 2020 problem
            Added: OSDMenuItemModifyValueArrows()
            Modified: Void cursor when OSD is dirty (instead of only when number of lines changes)
            Added: New menu type "ListBox" (supporting basically all existing menu features)
            Added: Restrict the buttons in list boxes to 2 lines
            Added: OSDMenuListBoxIsVisible()
            Added: OSDMenuListBoxDestroy() and OSDMenuListBoxDestroyNoOSDUpdate()
            Modified: TMSOSDMenu demo demonstrates use of a list box