@@ -1151,3 +1151,4 @@ The following functions accept any form a path. The INI and language INI functio
             Added: OSDMenuListBoxIsVisible()
             Added: OSDMenuListBoxDestroy() and OSDMenuListBoxDestroyNoOSDUpdate()
             Modified: TMSOSDMenu demo demonstrates use of a list box
+            Added: TMSOSDMenu ListBox demo to demonstrate a stand-alone list box
